--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,5 @@ jobs:
       - name: Run a multi-line script
         run: |
           javac -cp ".;lib\junit-4.13.2.jar;lib\hamcrest-core-1.3.jar" MarkdownParse.java MarkdownParseTest.java 
-          java -cp ".;lib/junit-4.13.2.jar;lib/hamcrest-core-1.3.jar" org.junit.runner.JUnitCore MarkdownParse MarkdownParseTest 
+          java -cp ".;lib/junit-4.13.2.jar;lib/hamcrest-core-1.3.jar" org.junit.runner.JUnitCore MarkdownParseTest  
         
